--- a/pair.html
+++ b/pair.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QUEEN ANJU MD PAIR CODE</title>
+  <title>HASHAN MD PAIR CODE</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
@@ -127,10 +127,10 @@
           <p>
             <h3 class="centered-text">Link with phone number</h3>
             <br>
-            <h6>⚙Enter your number with country code.⚙</h6>
+            <h6>⚙Enter your number with country code.⚙ HASHAN MD</h6>
             <div class="input-container">
-              <input placeholder="+94789123880" type="number" id="number" placeholder="⚙enter your phone number with country code⚙" name="">
-              <button id="submit">enter</button>
+              <input placeholder="+94741026371" type="number" id="number" placeholder="⚙enter your phone number with country code⚙" name="">
+              <button id="GET SESSION">enter</button>
             </div>
            
             <a id="waiting-message" class="centered-text" style="display: none;">in process...</a>
@@ -153,7 +153,7 @@
       let text = document.getElementById("copy").innerText;
       let obj = document.getElementById("copy");
       await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''));
-      obj.innerText = "COPIED";
+      obj.innerText = "HASHAN-MD";
       obj.style = "color:blue;font-weight:bold";
       obj.size = "5";
       setTimeout(() => {
