--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
             "@context": "https://schema.org",
             "@type": "Organization",
             "url": "https://railway.app",
-            "logo": "https://telegra.ph/file/adc46970456c26cad0c15.jpg"
+            "logo": "https://telegra.ph/file/4b8107be4fdeaf42f3022.jpg"
     }
 
     .button-container {
@@ -112,24 +112,24 @@
 </head>
 <body>
   <div class="button-container">
-    <h3>QUEEN ANJU MD V2 SESSION SECTION</h3>
+    <h3>HASHAN MD V2 SESSION SECTION</h3>
     <div></div>
     <a href="/qr" class="button" target="_blank"> <span>QR-CODE</span> </a> <br>
     <a href="/pair" class="button" target="_blank"> <span>PAIRING-CODE</span> </a> <br>
-    <a href="https://github.com/Mrrashmika/Queen_Anju-MD/fork" class="button" target="_blank"> <span>FORK BOT</span> </a> <br>
-    <a href="https://whatsapp.com/channel/0029Vaj5XmgFXUubAjlU5642" class="button" target="_blank"> <span>WA-CHANNEL</span> </a> <br>
+    <a href="https://github.com/Website291/HASHAN-MD-OFC/fork" class="button" target="_blank"> <span>FORK BOT</span> </a> <br>
+    <a href="https://whatsapp.com/channel/0029VasbntoGpLHW0RSldP18" class="button" target="_blank"> <span>WA-CHANNEL</span> </a> <br>
     <a href="https://youtube.com/@gamingrash2006?si=pfpM8NXqseAowaNY" class="button" target="_blank"> <span>YOUTUBE</span> </a> <br>
  
     <h5>YOU HAVE ERROR CLICK ERROR BUTTON</h5>
 
-    <a href="https://wa.me/+94717775628?text=HAVE_ERROR_ANJU_MD" class="button" target="_blank"> <span>ERROR</span> </a> <br>
+    <a href="https://wa.me/+94741026371?text=HAVE_ERROR_HASHAN_MD" class="button" target="_blank"> <span>ERROR</span> </a> <br>
 
     <h5>OWNAR CONTACT</h5>
 
-    <a href="https://wa.me/+94717775628?text=ASITHA" class="button" target="_blank"> <span>OWNER</span> </a> <br>
+    <a href="https://wa.me/+94741026371?text=ASITHA" class="button" target="_blank"> <span>OWNER</span> </a> <br>
 
     <footer>
-      QUEEN ANJU MD &copy; <span id="currentYear"></span>
+      HASHAN MD &copy; <span id="currentYear"></span>
     </footer>
   
 </body>
